After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776708 - Preferences, Build->Build Workers does not seem to work
Preferences, Build->Build Workers does not seem to work
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: preferences
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-02 10:58 UTC by Wayne Blaszczyk
Modified: 2017-01-05 08:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
configuration: copy IdeConfiguration:parallelism when snapshoting (1.05 KB, patch)
2017-01-04 02:03 UTC, Christian Hergert
committed Details | Review
configuration: return default from gsettings when unset (1.06 KB, patch)
2017-01-05 03:10 UTC, Christian Hergert
committed Details | Review

Description Wayne Blaszczyk 2017-01-02 10:58:24 UTC
Regardless of what Preferences, Build->Build Workers is set to, during the build phase, it always generates make 'all' '-j9'. I've tried setting it to default, 1, 2, etc..., but it always comes back with -j9.
Comment 1 Christian Hergert 2017-01-04 02:03:51 UTC
Created attachment 342806 [details] [review]
configuration: copy IdeConfiguration:parallelism when snapshoting

Without this, we will always default to -1, which is n_cpu + 1.
Comment 2 Christian Hergert 2017-01-04 02:04:45 UTC
Attachment 342806 [details] pushed as 1b53517 - configuration: copy IdeConfiguration:parallelism when snapshoting
Comment 3 Wayne Blaszczyk 2017-01-04 10:40:55 UTC
I've build gnome-builder with the patch, but it seems to not have fixed the issue. I've even downloaded gnome-builder-1b53517.tar.xz and built and installed from this tarball. It still producing make 'all' '-j9' no matter what value is set. Not sure if it matters, but I'm working with a Vala project.
Comment 4 Christian Hergert 2017-01-05 03:10:19 UTC
Created attachment 342919 [details] [review]
configuration: return default from gsettings when unset

If we haven't set the parallel build count manually, we want to use the
default for the system (which is defined in gsettings).
Comment 5 Christian Hergert 2017-01-05 03:12:09 UTC
Oops! Looks like there were two bugs here.

Attachment 342919 [details] pushed as c647bda - configuration: return default from gsettings when unset
Comment 6 Wayne Blaszczyk 2017-01-05 08:11:13 UTC
I can confirm that it has now been fixed.
Thank you.