configuration: copy IdeConfiguration:parallelism when snapshoting

Without this, we will always default to -1, which is n_cpu + 1.

https://bugzilla.gnome.org/show_bug.cgi?id=776708